# HeatNet

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: README.md  evaluate.example.json  predict.example.json  prepare_data.example.json  train.example.json
data/: README.md
docs/: README.md
outputs/: README.md
outputs/evaluations/: linemod_model_comparison.json
scripts/: _bootstrap.py  _config.py  evaluate.py  predict.py  prepare_data.py  train.py
src/heatnet/: __init__.py  __main__.py  cli.py  config.py
src/heatnet/commands/: __init__.py  evaluate.py  predict.py  prepare_data.py  train.py
src/heatnet/data/: __init__.py  datasets.py  preparation.py
src/heatnet/evaluation/: __init__.py  add.py  keypoints.py  pnp.py
src/heatnet/inference/: __init__.py  predictor.py
src/heatnet/models/: __init__.py  baseline.py  cross_fusion.py
src/heatnet/training/: __init__.py  losses.py  trainer.py
