[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heatnet"
version = "0.1.0"
description = "Modular 6D pose estimation pipeline for LINEMOD."
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
heatnet = "heatnet.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
